--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,51 @@
 <div class="hero">
-    <h1>Pyxis</h1>
+    <h1 style="letter-spacing: 50px">Pyxis</h1>
 </div>
 <div class="content">
-    <h1>Site Content</h1>
+    <div class="mission-statement">
+        <h1>
+            Don't just get a job, get the job you deserve.
+        </h1>
+
+        <p>
+            Pyxis is a website company that will help you to improve your business and to make your profits more. We
+            employ the goodest technologia. We have advacned people and we r very smart so u should hire us. Also
+            necessitamos spellchek.
+        </p>
+    </div>
+    <h1 class="design-process-heading">Our Design Process</h1>
+    <div class="design-process">
+        <div class="design-process-item">
+            <img src="img/cat.jpg">
+            <h5>Step For Design</h5>
+            <p>
+                This is an exampel of what kind of stuff we do at pyxis. w r vry smrt pls hire us. Also we do SEO.
+                jimme the money$ pls. THis is vry imprtant.
+            </p>
+        </div>
+        <div class="design-process-item">
+            <img src="img/cat.jpg">
+            <h5>Step For Design</h5>
+            <p>
+                This is an exampel of what kind of stuff we do at pyxis. w r vry smrt pls hire us. Also we do SEO.
+                jimme the money$ pls. THis is vry imprtant.
+            </p>
+        </div>
+        <div class="design-process-item">
+            <img src="img/cat.jpg">
+            <h5>Step For Design</h5>
+            <p>
+                This is an exampel of what kind of stuff we do at pyxis. w r vry smrt pls hire us. Also we do SEO.
+                jimme the money$ pls. THis is vry imprtant.
+            </p>
+        </div>
+        <div class="design-process-item">
+            <img src="img/cat.jpg">
+            <h5>Step For Design</h5>
+            <p>
+                This is an exampel of what kind of stuff we do at pyxis. w r vry smrt pls hire us. Also we do SEO.
+                jimme the money$ pls. THis is vry imprtant.
+            </p>
+        </div>
+    </div>
 </div>
