--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -5,8 +5,11 @@
     <div class="spacer"></div>
     <div id="header-nav">
         <ul>
+            <li><a href="/about">About</a></li>
+            <li><a href="/process">Process</a></li>
             <li><a href="/pricing">Pricing</a></li>
-            <li><a href="/merch">Merchandise</a></li>
+            <li><a href="/merch">Merch</a></li>
+            <li><a href="/cart">Cart</a></li>
         </ul>
     </div>
 </div>
