--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -2,17 +2,17 @@
 	height: 100vh;
 	overflow: hidden auto;
 	perspective: 1px;
-    margin: 0;
-    padding: 0;
-    transform-style: preserve-3d;
+	margin: 0;
+	padding: 0;
+	transform-style: preserve-3d;
 }
 
 .hero {
 	position: relative;
 	height: 100vh;
 	display: flex;
-    align-items: center;
-    justify-content: center;
+	align-items: center;
+	justify-content: center;
 	font-size: 48px;
 	color: #fff;
 	width: 100%;
@@ -26,14 +26,14 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-    margin: 0;
-    
-    transform-origin: center center ;
+	margin: 0;
+
+	transform-origin: center center;
 
 	transform: translateZ(-2px) scale(3);
 	background-size: cover;
 	z-index: -1;
 
-	background-image: url("http://source.unsplash.com/pjxzpoYo5Gs");
+	// background-image: url("http://source.unsplash.com/pjxzpoYo5Gs");
+	background-image: url("/img/PolarisHeroImage.jpg");
 }
-
