--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,4 +1,4 @@
-<div id="header" v-bind:style="styleObject" v-scroll="handleScroll">
+<div id="header" :style="styleObject">
     <div class="header-left">
         <div class="title">Pyxis</div>
     </div>
