--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,7 +66,7 @@ body {
   flex-direction: row;
   height: 4rem;
   box-sizing: border-box;
-  padding: 0 1rem;
+  padding: 0.5rem 1rem;
   padding-right: 2rem;
   background-color: #455a64;
   color: white;
@@ -74,6 +74,9 @@ body {
   top: 0;
   left: 0;
   right: 0; }
+  #header .nav-logo {
+    max-height: 2rem;
+    margin: 0 0.5rem; }
   #header .spacer {
     flex: 300; }
   #header .header-left {
@@ -81,7 +84,10 @@ body {
     flex-direction: row;
     align-items: center; }
     #header .header-left .title {
-      font-size: 1.5rem; }
+      font-size: 1.5rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center; }
   #header ul {
     height: 100%;
     list-style-type: none;
@@ -99,6 +105,10 @@ body {
         padding: 0.5rem; }
         #header ul li a:hover {
           background-color: rgba(0, 0, 0, 0.2); }
+
+.nav-spacer {
+  height: 4rem;
+  width: 100%; }
 
 #hero {
   position: relative;
