--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,9 +146,18 @@ body {
   .plans-list li {
     flex: 0;
     margin: 0 50px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
     display: none; }
+    .plans-list li .plan-image {
+      display: block;
+      margin: 10px;
+      flex: 0; }
+    .plans-list li .plan-description {
+      margin: 10px; }
     .plans-list li.active {
-      display: block; }
+      display: flex; }
 
 .plans-gallery {
   display: flex;
