add fade class when header should animate

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,4 +1,4 @@
-<div id="header" {{#if fade}} :style="styleObject" {{/if}}>
+<div id="header" {{#if fade}} :style="styleObject" class="fade" {{/if}}>
     <div class="header-left">
         <div class="title">Pyxis</div>
     </div>
@@ -17,4 +17,3 @@
 {{#unless fade}}
     <div class="nav-spacer"></div>
 {{/unless}}
-
