--- a/views/partials/merch-product.hbs
+++ b/views/partials/merch-product.hbs
@@ -5,6 +5,6 @@
 	<div class="merch-product-text">
 		<h2>{{ name }}</h2>
 		<p class="merch-product-price">${{ price }}</p>
-		<a href="{{product-link id}}">View Item</a>
+		<a href="{{productLink id}}">View Item</a>
 	</div>
 </div>
