--- a/scss/components/button.scss
+++ b/scss/components/button.scss
@@ -1,26 +1,27 @@
+@import "../colors";
+
 @mixin button-background-color($color) {
-    background-color: $color;
-    &:hover {
-        background-color: darken($color, 10%);
-    }
+	background-color: $color;
+	&:hover {
+		background-color: darken($color, 10%);
+	}
 }
 
 .button {
-    position: relative;
-    display: inline-block;
-    margin: 30px auto;
-    padding: 12px;
+	position: relative;
+	display: inline-block;
+	margin: 30px auto;
+	padding: 12px;
 
-    overflow: hidden;
+	overflow: hidden;
 
-    // background-color: #2ecc71;
-    @include button-background-color(#2ecc71)
-    color: white;
-    border-width: 0;
-    outline: none;
-    border-radius: 2px;
-    text-decoration: none;
+	// background-color: #2ecc71;
+	@include button-background-color($button-base-bg);
+	color: $button-base-text;
+	border-width: 0;
+	outline: none;
+	border-radius: 2px;
+	text-decoration: none;
 
-    box-shadow: 0 1px 4px rgba(black, 0.6);
-
+	box-shadow: 0 1px 4px rgba(black, 0.6);
 }
