--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 #header {
 	z-index: 5;
 	display: flex;
@@ -6,8 +8,8 @@
 	box-sizing: border-box;
 	padding: 0.5rem 1rem;
 	padding-right: 2rem;
-	background-color: rgba(69, 90, 100, 1);
-	color: white;
+	background-color: $header-bg;
+	color: $header-text;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -61,8 +63,7 @@
 	}
 }
 
-
 .nav-spacer {
-    height: 4rem;
-    width: 100%;
+	height: 4rem;
+	width: 100%;
 }
