Add popup notifications

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -8,3 +8,8 @@ $mission-statement-bg: #ababab;
 // Button
 $button-base-bg: #2ecc71;
 $button-base-text: white;
+
+// Notification
+$notification-color: green;
+$notification-fail-color: red;
+$notification-text: white;
