--- a/scss/header.scss
+++ b/scss/header.scss
@@ -15,11 +15,6 @@
 	left: 0;
 	right: 0;
 
-	.nav-logo {
-		max-height: 2rem;
-		margin: 0 0.5rem;
-	}
-
 	.spacer {
 		flex: 300;
 	}
@@ -33,6 +28,18 @@
 			display: flex;
 			flex-direction: row;
 			align-items: center;
+			color: inherit;
+			text-decoration: none;
+			a {
+				color: inherit;
+				text-decoration: none;
+				display: block;
+				height: 100%;
+			}
+			img {
+				height: 1.5rem;
+				width: auto;
+			}
 		}
 	}
 
