--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>{{ title }}</title>
 	<link rel="stylesheet" href="/css/styles.css" />
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+	{{!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script> --}}
 </head>
 
 <body>
