--- a/views/about.hbs
+++ b/views/about.hbs
@@ -28,36 +28,52 @@
 
 	<div class="testimonials-grid">
 		<div class="testimonial" id="garuba-testimonial">
-			<h2>
-				Garuba
-			</h2>
-			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis fugiat corrupti fuga laudantium voluptatum
-				voluptate nobis doloremque! Illum fugit molestiae quam vero eum cupiditate asperiores! Esse veritatis alias
-				voluptatum placeat.</p>
+			<div class="testimonial-text">
+				<h2>Garuba</h2>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Veritatis fugiat corrupti fuga laudantium voluptatum
+					voluptate nobis doloremque! Illum fugit molestiae quam vero
+					eum cupiditate asperiores! Esse veritatis alias voluptatum
+					placeat.
+				</p>
+			</div>
 		</div>
 		<div class="testimonial" id="accuracy-testimonial">
-			<h2>
-				Accuracy
-			</h2>
-			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis fugiat corrupti fuga laudantium voluptatum
-				voluptate nobis doloremque! Illum fugit molestiae quam vero eum cupiditate asperiores! Esse veritatis alias
-				voluptatum placeat.</p>
+			<div class="testimonial-text">
+				<h2>Accuracy</h2>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Veritatis fugiat corrupti fuga laudantium voluptatum
+					voluptate nobis doloremque! Illum fugit molestiae quam vero
+					eum cupiditate asperiores! Esse veritatis alias voluptatum
+					placeat.
+				</p>
+			</div>
 		</div>
 		<div class="testimonial" id="form-testimonial">
-			<h2>
-				Form
-			</h2>
-			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis fugiat corrupti fuga laudantium voluptatum
-				voluptate nobis doloremque! Illum fugit molestiae quam vero eum cupiditate asperiores! Esse veritatis alias
-				voluptatum placeat.</p>
+			<div class="testimonial-text">
+				<h2>Form</h2>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Veritatis fugiat corrupti fuga laudantium voluptatum
+					voluptate nobis doloremque! Illum fugit molestiae quam vero
+					eum cupiditate asperiores! Esse veritatis alias voluptatum
+					placeat.
+				</p>
+			</div>
 		</div>
 		<div class="testimonial" id="northview-testimonial">
-			<h2>
-				Northview
-			</h2>
-			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis fugiat corrupti fuga laudantium voluptatum
-				voluptate nobis doloremque! Illum fugit molestiae quam vero eum cupiditate asperiores! Esse veritatis alias
-				voluptatum placeat.</p>
+			<div class="testimonial-text">
+				<h2>Northview</h2>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Veritatis fugiat corrupti fuga laudantium voluptatum
+					voluptate nobis doloremque! Illum fugit molestiae quam vero
+					eum cupiditate asperiores! Esse veritatis alias voluptatum
+					placeat.
+				</p>
+			</div>
 		</div>
 	</div>
 </div>
