add logo to nav (not rendering for some reason)

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,11 @@
 <div id="header" {{#if fade}} :style="styleObject" class="fade" {{/if}}>
     <div class="header-left">
-        <div class="title">Pyxis</div>
+        <div class="title">
+            <a href="/">
+                Pyxis
+                <img src="/img/PyxisLogo.svg">
+            </a>
+        </div>
     </div>
     <div class="spacer"></div>
     <div id="header-nav">
