--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -2,6 +2,10 @@
 $header-bg: rgba(69, 90, 100, 1);
 $header-text: white;
 
+// Footer
+$footer-bg: #616161;
+$footer-text: white;
+
 $mission-statement-bg: #ababab;
 
 // Components
