add title to process page

--- a/views/process.hbs
+++ b/views/process.hbs
@@ -1,19 +1,24 @@
 {{> nav}}
 <div class="process-page">
-	<div class="step">
-		<p>This is the description for the 180 step</p>
-		<img src="img/cat.jpg" />
-	</div>
-	<div class="step">
-		<img src="img/cat.jpg" alt="" />
-		<p>This is the description for the 360 step</p>
-	</div>
-	<div class="step">
-		<p>This is the description for the 540 step</p>
-		<img src="img/cat.jpg" />
-	</div>
-	<div class="step">
-		<img src="img/cat.jpg" alt="" />
-		<p>This is the description for the 360 step</p>
+	<h1>
+		Our Process
+	</h1>
+	<div class="steps-list">
+		<div class="step">
+			<img src="img/cat.jpg" />
+			<p>This is the description for the 180 step</p>
+		</div>
+		<div class="step">
+			<p>This is the description for the 360 step</p>
+			<img src="img/cat.jpg" alt="" />
+		</div>
+		<div class="step">
+			<img src="img/cat.jpg" />
+			<p>This is the description for the 540 step</p>
+		</div>
+		<div class="step">
+			<p>This is the description for the 360 step</p>
+			<img src="img/cat.jpg" alt="" />
+		</div>
 	</div>
 </div>
