--- a/scss/process.scss
+++ b/scss/process.scss
@@ -1,13 +1,16 @@
 .process-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+	padding: 0 10%;
+	.steps-list {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
 	.step {
 		display: flex;
 		flex-direction: row;
 		width: 80%;
-        justify-content: space-around;
+		justify-content: space-around;
 		p {
 			flex: 5;
 		}
