add title section

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,6 @@
-{{> nav}}
-<div class="about-page">
-	<h1>About Us</h1>
+{{> title-section title="About Us" }}
+<div class="about-page page">
+	<h2>Pyxis</h2>
 	<p class="about-text">
 		Est. Sed eleifend odio sed leo. Mauris tortor turpis, dignissim vel,
 		ornare ac, ultricies quis, magna. Phasellus lacinia, augue ac dictum
