--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 {{> nav fade=true }}
-<div id="hero" :style="styleObject">
+<div id="hero" :style="styleObject" class="fade-target">
     <h1 style="letter-spacing: 50px">Pyxis</h1>
 </div>
 <div class="content">
