--- a/views/process.hbs
+++ b/views/process.hbs
@@ -1,8 +1,5 @@
-{{> nav}}
-<div class="process-page">
-	<h1>
-		Our Process
-	</h1>
+{{> title-section}}
+<div class="process-page page">
 	<div class="steps-list">
 		<div class="step">
 			<img src="img/cat.jpg" />
