--- a/scss/about.scss
+++ b/scss/about.scss
@@ -1,17 +1,16 @@
 .about-page {
-	padding: 0 10%;
 	.testimonials-grid {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(2, 1fr);
 		grid-gap: 20px;
-		height: 40vw;
-		width: 80vw;
+		height: 30vw;
+		width: 100%;
 
 		@media screen and (max-width: 992px) {
 			grid-template-columns: repeat(1, 1fr);
 			grid-template-rows: repeat(4, 1fr);
-			height: 160vw;
+			height: 120vw;
 		}
 
 		.testimonial {
@@ -25,17 +24,25 @@
 			background-position: center;
 			background-size: cover;
 
-            .testimonial-text {
-                padding: 2rem;
-            }
+			.testimonial-text {
+				padding: 2rem;
+			}
 		}
 
 		#northview-testimonial {
 			// background-image: url("/img/testimonials/northview.jpg");
-            background-image: linear-gradient(rgba(black, 0.2), rgba(black, 0.8)), url("/img/testimonials/northview.jpg");
+			background-image: linear-gradient(
+					rgba(black, 0.2),
+					rgba(black, 0.8)
+				),
+				url("/img/testimonials/northview.jpg");
 		}
-        #garuba-testimonial {
-            background-image: linear-gradient(rgba(black, 0.2), rgba(black, 0.8)), url("/img/testimonials/garuba.jpg");
-        }
+		#garuba-testimonial {
+			background-image: linear-gradient(
+					rgba(black, 0.2),
+					rgba(black, 0.8)
+				),
+				url("/img/testimonials/garuba.jpg");
+		}
 	}
 }
