--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -3,3 +3,11 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+body {
+	background-image: url("/img/sayagata-400px.png");
+	background-position: 0 0;
+	background-repeat: repeat repeat;
+	background-attachment: local;
+	font-size: 20px;
+}
