push footer to bottom on viewproduct page

--- a/scss/view-product.scss
+++ b/scss/view-product.scss
@@ -3,6 +3,7 @@
     width: 60%;
     margin: auto;
     margin-top: 2rem;
+    min-height: calc(100vh - 6.5rem);
 
     .product-image {
         display: flex;
