change logo to png 2

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -41,6 +41,13 @@
 				width: auto;
 			}
 		}
+		.title-logo {
+			height: 3rem;
+			img {
+				height: 100%;
+			}
+			margin-left: 10px;
+		}
 	}
 
 	ul {
