--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -3,8 +3,10 @@
         <div class="title">
             <a href="/">
                 Pyxis
-                <img src="/img/PyxisLogo.svg">
             </a>
+        </div>
+        <div class="title-logo">
+            <a href="/"><img src="img/PyxisLogo.png" alt=""></a>
         </div>
     </div>
     <div class="spacer"></div>
