Add 3 out of 4 process shorts to homepage

--- a/scss/content.scss
+++ b/scss/content.scss
@@ -41,9 +41,11 @@
 
 .design-process-item {
 	padding: 10px;
+    flex: 1;
 	img {
 		display: block;
 		margin: auto;
+        height: 250px;
 	}
 
 	h5 {
