add animation to process page

--- a/views/process.hbs
+++ b/views/process.hbs
@@ -2,20 +2,58 @@
 <div class="process-page page">
 	<div class="steps-list">
 		<div class="step">
-			<img src="img/cat.jpg" />
-			<p>This is the description for the 180 step</p>
+			<h2>Research</h2>
+			<p>
+				The best foundation is one that can adapt. By monitoring and
+				interpreting changes in the current market, consumer interests,
+				and business needs, Pyxis is able to construct a blueprint for
+				success.
+			</p>
+			<div class="box-row" v-enter-animation="'animated fadeInLeft'">
+				<div class="box"></div>
+				<div class="box"></div>
+				<div class="box"></div>
+			</div>
 		</div>
 		<div class="step">
-			<p>This is the description for the 360 step</p>
-			<img src="img/cat.jpg" alt="" />
+			<h2>UX Design</h2>
+			<p>
+				A fresh, modern, and functional user experience is a key
+				component in any successful website. Pyxis tailors the structure
+				and interface of your website to create an unforgettable user
+				experience.
+			</p>
+			<div class="box-row" v-enter-animation="'animated fadeInRight'">
+				<div class="box"></div>
+				<div class="box"></div>
+				<div class="box"></div>
+			</div>
 		</div>
 		<div class="step">
-			<img src="img/cat.jpg" />
-			<p>This is the description for the 540 step</p>
+			<h2>Web Design</h2>
+			<p>
+				At Pyxis we offer more than just a website. We offer creative
+				strategies, business awareness, and experience to create a
+				website that can solve any problem and deliver results.
+			</p>
+			<div class="box-row" v-enter-animation="'animated fadeInLeft'">
+				<div class="box"></div>
+				<div class="box"></div>
+				<div class="box"></div>
+			</div>
 		</div>
 		<div class="step">
-			<p>This is the description for the 360 step</p>
-			<img src="img/cat.jpg" alt="" />
+			<h2>Marketing</h2>
+			<p>
+				Pyxis continues monitor and improve your site even after it is
+				complete. Working to maximize your return on investment by
+				increasing traffic.
+			</p>
+			<div class="box-row" v-enter-animation="'animated fadeInRight'">
+				<div class="box"></div>
+				<div class="box"></div>
+				<div class="box"></div>
+			</div>
 		</div>
 	</div>
 </div>
