--- a/scss/process.scss
+++ b/scss/process.scss
@@ -7,7 +7,7 @@
 	}
 	.step {
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		width: 80%;
 		justify-content: space-around;
 		p {
@@ -16,6 +16,19 @@
 		img {
 			flex: 0;
 			margin: 10px;
+            align-self: center;
 		}
+        .box-row {
+            flex-direction: row;
+            display: flex;
+            justify-content: space-evenly;
+
+            .box {
+                width: 250px;
+                height: 250px;
+                flex-grow: 0;
+                background: black;
+            }
+        }
 	}
 }
