--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -10,4 +10,14 @@ body {
 	background-repeat: repeat repeat;
 	background-attachment: local;
 	font-size: 20px;
+	font-family: "Titillium Web", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: "Play", sans-serif;
 }
