misc updates - removed 540 and change homepage bg to transparent

--- a/views/pricing.hbs
+++ b/views/pricing.hbs
@@ -26,17 +26,6 @@
         </div>
         <div class="plan">
             <div class="plan-image">
-                <img src="/img/plans/planPentagon.svg">
-            </div>
-            <div class="plan-text">
-                <h3>540</h3>
-                <p>540 description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita rerum porro
-                    perferendis laboriosam amet architecto asperiores voluptatibus sequi et, deserunt dolores pariatur
-                    corrupti facere enim fuga quaerat, iure incidunt culpa.</p>
-            </div>
-        </div>
-        <div class="plan">
-            <div class="plan-image">
                 <img src="/img/plans/planHexagon.svg">
             </div>
             <div class="plan-text">
@@ -47,11 +36,11 @@
             </div>
         </div>
     </div>
-    <h2>Comparison of Features</h2>
+    {{!-- <h2>Comparison of Features</h2>
     <div class="plans-comparison">
         <div class="comparison">
             <div class="feature">Feature 1</div>
 
         </div>
-    </div>
+    </div> --}}
 </div>
