--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -8,6 +8,11 @@ $footer-text: white;
 
 $mission-statement-bg: #ababab;
 
+// Process page box
+$box-top-bg: #c4c4c4;
+$box-bottom-bg: #e5e5e5;
+
+
 // Components
 // Button
 $button-base-bg: #2ecc71;
@@ -17,3 +22,4 @@ $button-base-text: white;
 $notification-color: green;
 $notification-fail-color: red;
 $notification-text: white;
+
