--- a/views/process.hbs
+++ b/views/process.hbs
@@ -10,9 +10,36 @@
 				success.
 			</p>
 			<div class="box-row" v-enter-animation="'animated fadeInLeft'">
-				<div class="box"></div>
-				<div class="box"></div>
-				<div class="box"></div>
+				<div class="box">
+					<div class="box--top"><h3>Market Research</h3></div>
+					<div class="box--bottom">
+						<p>
+							From shareholders to competitors, we analyze the
+							current market to create a formula for future
+							success.
+						</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="box--top"><h3>Customer Journeys</h3></div>
+					<div class="box--bottom">
+						<p>
+							We gather information from the customers through
+							various methods such as interviews to develop a
+							targeted journey that satisfies their needs.
+						</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="box--top"><h3>SWOT Analysis</h3></div>
+					<div class="box--bottom">
+						<p>
+							We work with our clients to identify and address
+							their strengths, weakness, opportunities, and
+							threats.
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="step">
@@ -24,9 +51,39 @@
 				experience.
 			</p>
 			<div class="box-row" v-enter-animation="'animated fadeInRight'">
-				<div class="box"></div>
-				<div class="box"></div>
-				<div class="box"></div>
+				<div class="box">
+					<div class="box--top">
+						<h3>Information Architecture</h3>
+					</div>
+					<div class="box--bottom">
+						<p>
+							Our years of experience help utilize the art and
+							science of organizing and labelling websites to
+							create a smooth easy to navigate structure.
+						</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="box--top">
+						<div class="box--top"><h3>UI Design</h3></div>
+					</div>
+					<div class="box--bottom">
+						<p>
+							We create unique user interfaces tailored to the
+							interests of the customers, guaranteeing their
+							satisfaction.
+						</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="box--top"><h3>Testing</h3></div>
+					<div class="box--bottom">
+						<p>
+							We test our interfaces with real people ensuring
+							functionality and performance.
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="step">
@@ -37,9 +94,38 @@
 				website that can solve any problem and deliver results.
 			</p>
 			<div class="box-row" v-enter-animation="'animated fadeInLeft'">
-				<div class="box"></div>
-				<div class="box"></div>
-				<div class="box"></div>
+				<div class="box">
+					<div class="box--top">
+						<h3>Award winning Strategies</h3>
+					</div>
+					<div class="box--bottom">
+						<p>
+							Our innovative strategies can elevate your website
+							to no.1 to stand alongside our long line of
+							successful projects.
+						</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="box--top"><h3>Interactive Experiences</h3></div>
+					<div class="box--bottom">
+						<p>
+							With creative direction and targeted experiences we
+							utilize the power of web design to captivate and
+							engage the customer.
+						</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="box--top"><h3>Branding</h3></div>
+					<div class="box--bottom">
+						<p>
+							We work together with our clients to create a
+							website that is consistent with their company
+							branding.
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="step">
@@ -50,9 +136,34 @@
 				increasing traffic.
 			</p>
 			<div class="box-row" v-enter-animation="'animated fadeInRight'">
-				<div class="box"></div>
-				<div class="box"></div>
-				<div class="box"></div>
+				<div class="box">
+					<div class="box--top"><h3>Content Marketing</h3></div>
+					<div class="box--bottom">
+						<p>
+							We expand your audience by writing and publishing
+							blog articles through a multitude of social
+							channels.
+						</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="box--top"><h3>SEO</h3></div>
+					<div class="box--bottom">
+						<p>
+							We ensure that your website ranks highly in relevant
+							searches by utilizing Search Engine Optimization.
+						</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="box--top"><h3>Paid Advertising</h3></div>
+					<div class="box--bottom">
+						<p>
+							We boost traffic to your site by strategically
+							running online ad campaigns.
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
