--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -2,6 +2,7 @@
 	position: relative;
 	height: 100vh;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	font-size: 48px;
@@ -23,4 +24,19 @@
 
 	// background-image: url("http://source.unsplash.com/pjxzpoYo5Gs");
 	background-image: url("/img/PolarisHeroImage.jpg");
+
+	.header-main {
+		letter-spacing: 50px;
+		h1 {
+			margin: 0;
+		}
+	}
+	.header-subtext {
+		letter-spacing: 25px;
+		text-align: center;
+		h2 {
+			margin: 0;
+			margin-left: -25px;
+		}
+	}
 }
