--- a/scss/process.scss
+++ b/scss/process.scss
@@ -1,3 +1,4 @@
+@import "colors";
 .process-page {
 	.steps-list {
 		display: flex;
@@ -16,19 +17,46 @@
 		img {
 			flex: 0;
 			margin: 10px;
-            align-self: center;
+			align-self: center;
 		}
-        .box-row {
-            flex-direction: row;
-            display: flex;
-            justify-content: space-evenly;
+		.box-row {
+			flex-direction: row;
+			display: flex;
+			justify-content: space-evenly;
 
-            .box {
-                width: 250px;
-                height: 250px;
-                flex-grow: 0;
-                background: black;
-            }
-        }
+			@media screen and (max-width: 992px) {
+				flex-direction: column;
+			}
+
+			.box {
+				flex-grow: 1;
+				flex-basis: 0;
+				margin: 10px;
+				border: 2px solid black;
+				* {
+					margin: 0;
+				}
+
+				display: flex;
+				flex-direction: column;
+
+				.box--top {
+					background: $box-top-bg;
+					flex: 0;
+					padding: 8px;
+                    flex-basis: 0;
+                    min-height: 50px;
+                    h3 {
+                        line-height: 50px;
+                    }
+                    border-bottom: 1px solid black;
+				}
+				.box--bottom {
+					background: $box-bottom-bg;
+					flex: 1;
+					padding: 8px;
+				}
+			}
+		}
 	}
 }
