--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,16 +1,24 @@
 {{> nav fade=true }}
 <div id="hero" :style="styleObject" class="fade-target">
-	<h1 style="letter-spacing: 50px">Pyxis</h1>
+	{{!-- <h1 style="letter-spacing: 50px">Pyxis</h1> --}}
+	<div class="header-main">
+		<h1>
+			Pyxis
+		</h1>
+	</div>
+	<div class="header-subtext">
+		<h2>
+			Web Design
+		</h2>
+	</div>
 </div>
 <div class="content">
 	<div class="mission-statement">
-		<h1>Don't just get a job, get the job you deserve.</h1>
+		<h1>Beautiful, Functional Digital Transformation</h1>
 
 		<p>
-			Pyxis is a website company that will help you to improve your
-			business and to make your profits more. We employ the goodest
-			technologia. We have advacned people and we r very smart so u should
-			hire us. Also necessitamos spellchek.
+			Your website is equivalent to your first impression. We at Pyxis have been creating and transforming websites for a
+			long time, so you know that your website will be a world-class destination - having customers gaze in awe.
 		</p>
 	</div>
 	<h1 class="design-process-heading">Unlimited Possibilities</h1>
