--- a/views/pricing.hbs
+++ b/views/pricing.hbs
@@ -1,46 +1,58 @@
 {{> title-section title="Pricing"}}
 <div class="pricing-page page">
-    <h2>Our Plans</h2>
-    <div class="plans-table">
-        <div class="plan">
-            <div class="plan-image">
-                <img src="/img/plans/planTriangle.svg">
-            </div>
-            <div class="plan-text">
-                <h3>180</h3>
-                <p>180 description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita rerum porro
-                    perferendis laboriosam amet architecto asperiores voluptatibus sequi et, deserunt dolores pariatur
-                    corrupti facere enim fuga quaerat, iure incidunt culpa.</p>
-            </div>
-        </div>
-        <div class="plan">
-            <div class="plan-image">
-                <img src="/img/plans/planSquare.svg">
-            </div>
-            <div class="plan-text">
-                <h3>360</h3>
-                <p>360 description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita rerum porro
-                    perferendis laboriosam amet architecto asperiores voluptatibus sequi et, deserunt dolores pariatur
-                    corrupti facere enim fuga quaerat, iure incidunt culpa.</p>
-            </div>
-        </div>
-        <div class="plan">
-            <div class="plan-image">
-                <img src="/img/plans/planHexagon.svg">
-            </div>
-            <div class="plan-text">
-                <h3>720</h3>
-                <p>720 description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita rerum porro
-                    perferendis laboriosam amet architecto asperiores voluptatibus sequi et, deserunt dolores pariatur
-                    corrupti facere enim fuga quaerat, iure incidunt culpa.</p>
-            </div>
-        </div>
-    </div>
-    {{!-- <h2>Comparison of Features</h2>
-    <div class="plans-comparison">
-        <div class="comparison">
-            <div class="feature">Feature 1</div>
-
-        </div>
-    </div> --}}
+	<h2>Our Plans</h2>
+	<div class="plans-table">
+		<div class="plan">
+			<div class="plan-image">
+				<img src="/img/plans/planTriangle.svg" />
+			</div>
+			<div class="plan-text">
+				<h3>180</h3>
+				<p>
+					180 description Lorem ipsum dolor sit amet, consectetur
+					adipisicing elit. Expedita rerum porro perferendis
+					laboriosam amet architecto asperiores voluptatibus sequi et,
+					deserunt dolores pariatur corrupti facere enim fuga quaerat,
+					iure incidunt culpa.
+				</p>
+			</div>
+		</div>
+		<div class="plan">
+			<div class="plan-image">
+				<img src="/img/plans/planSquare.svg" />
+			</div>
+			<div class="plan-text">
+				<h3>360</h3>
+				<p>
+					360 description Lorem ipsum dolor sit amet, consectetur
+					adipisicing elit. Expedita rerum porro perferendis
+					laboriosam amet architecto asperiores voluptatibus sequi et,
+					deserunt dolores pariatur corrupti facere enim fuga quaerat,
+					iure incidunt culpa.
+				</p>
+			</div>
+		</div>
+		<div class="plan">
+			<div class="plan-image">
+				<img src="/img/plans/planHexagon.svg" />
+			</div>
+			<div class="plan-text">
+				<h3>720</h3>
+				<p>
+					720 description Lorem ipsum dolor sit amet, consectetur
+					adipisicing elit. Expedita rerum porro perferendis
+					laboriosam amet architecto asperiores voluptatibus sequi et,
+					deserunt dolores pariatur corrupti facere enim fuga quaerat,
+					iure incidunt culpa.
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="tau">
+		<div>
+			<h5>Need a more custom solution?</h5>
+			<h2>Tau</h2>
+		</div>
+		<img src="img/cat.jpg" />
+	</div>
 </div>
