checkout and calendly

--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -88,6 +88,7 @@
 					<input type="text" name="expiration" />
 				</div>
 			</div>
+			<button class="button">Submit</button>
 		</form>
 	</div>
 </div>
