--- a/views/pricing.hbs
+++ b/views/pricing.hbs
@@ -50,9 +50,20 @@
 	</div>
 	<div class="tau">
 		<div>
-			<h5>Need a more custom solution?</h5>
+			<h5>Need a more custom solution? Schedule an appointment</h5>
 			<h2>Tau</h2>
 		</div>
 		<img src="img/cat.jpg" />
+		<!-- Calendly inline widget begin -->
+		<div
+			class="calendly-inline-widget"
+			data-url="https://calendly.com/pyxiswebdesign1"
+			style="min-width:340px;height:580px;"
+		></div>
+		<script
+			type="text/javascript"
+			src="https://assets.calendly.com/assets/external/widget.js"
+		></script>
+		<!-- Calendly inline widget end -->
 	</div>
 </div>
