--- a/scss/about.scss
+++ b/scss/about.scss
@@ -26,6 +26,10 @@
 
 			.testimonial-text {
 				padding: 2rem;
+                a {
+                    color: white;
+                    text-decoration: none;
+                }
 			}
 		}
 
