--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -19,6 +19,11 @@
             <li><a href="/cart">Cart</a></li>
         </ul>
     </div>
+    <div id="show-sidebar">
+        <button onclick="toggleSidebar()">
+            <i class="fas fa-bars"></i>
+        </button>
+    </div>
 </div>
 
 {{#unless fade}}
