--- a/views/pricing.hbs
+++ b/views/pricing.hbs
@@ -2,68 +2,73 @@
 <div class="pricing-page page">
 	<h2>Our Plans</h2>
 	<div class="plans-table">
-		<div class="plan">
+		<div class="plan" v-enter-animation="'animated fadeIn'">
 			<div class="plan-image">
 				<img src="/img/plans/planTriangle.svg" />
 			</div>
 			<div class="plan-text">
 				<h3>180</h3>
 				<p>
-					180 description Lorem ipsum dolor sit amet, consectetur
-					adipisicing elit. Expedita rerum porro perferendis
-					laboriosam amet architecto asperiores voluptatibus sequi et,
-					deserunt dolores pariatur corrupti facere enim fuga quaerat,
-					iure incidunt culpa.
+					<strong> Our basic plan </strong><br>
+					<ul>
+						<li>Market Research</li>
+						<li>Information Architecture</li>
+						<li>Award-Winning Web Design</li>
+						<li> Content Marketing </li>
+					</ul>
 				</p>
 			</div>
 		</div>
-		<div class="plan">
+		<div class="plan" v-enter-animation="'animated fadeIn'">
 			<div class="plan-image">
 				<img src="/img/plans/planSquare.svg" />
 			</div>
 			<div class="plan-text">
 				<h3>360</h3>
 				<p>
-					360 description Lorem ipsum dolor sit amet, consectetur
-					adipisicing elit. Expedita rerum porro perferendis
-					laboriosam amet architecto asperiores voluptatibus sequi et,
-					deserunt dolores pariatur corrupti facere enim fuga quaerat,
-					iure incidunt culpa.
+					<strong> All features of 180, plus </strong><br>
+					<ul>
+						<li>Customer Journeys</li>
+						<li>UI Design</li>
+						<li>Interactive Experiences</li>
+						<li>SEO</li>
+					</ul>
 				</p>
 			</div>
 		</div>
-		<div class="plan">
+		<div class="plan" v-enter-animation="'animated fadeIn'">
 			<div class="plan-image">
 				<img src="/img/plans/planHexagon.svg" />
 			</div>
 			<div class="plan-text">
 				<h3>720</h3>
 				<p>
-					720 description Lorem ipsum dolor sit amet, consectetur
-					adipisicing elit. Expedita rerum porro perferendis
-					laboriosam amet architecto asperiores voluptatibus sequi et,
-					deserunt dolores pariatur corrupti facere enim fuga quaerat,
-					iure incidunt culpa.
+					<strong> All features of 360, plus </strong><br>
+					<ul>
+						<li>SWOT Analysis</li>
+						<li>Testing</li>
+						<li>Branding</li>
+						<li>Paid Advertising</li>
+					</ul>
 				</p>
 			</div>
 		</div>
 	</div>
 	<div class="tau">
 		<div>
-			<h5>Need a more custom solution? Schedule an appointment</h5>
+			<h5>Need a more custom solution? Schedule an appointment below!</h5>
 			<h2>Tau</h2>
+			<p>
+				Each website is unique. As such, if your website needs something specific or a new strategy all
+				together, you’ve come to the right place. We at Pyxis created Tau to be a plan that can be fully
+				customized by the client to cater their specific needs. All that's left is to schedule a time for
+				consultation.
+			</p>
 		</div>
-		<img src="img/cat.jpg" />
 		<!-- Calendly inline widget begin -->
-		<div
-			class="calendly-inline-widget"
-			data-url="https://calendly.com/pyxiswebdesign1"
-			style="min-width:340px;height:580px;"
-		></div>
-		<script
-			type="text/javascript"
-			src="https://assets.calendly.com/assets/external/widget.js"
-		></script>
+		<div class="calendly-inline-widget" data-url="https://calendly.com/pyxiswebdesign1"
+			style="min-width:340px;height:580px;"></div>
+		<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
 		<!-- Calendly inline widget end -->
 	</div>
 </div>
