--- a/scss/cart.scss
+++ b/scss/cart.scss
@@ -4,6 +4,25 @@
 	.container {
 		max-width: 1200px;
 		margin: auto;
+
+		.plans-select {
+			.selected-plan {
+				display: flex;
+				flex-direction: row;
+				.plan {
+					padding: 16px;
+					background-color: #efefef;
+					margin: 10px;
+					border-radius: 8px;
+					box-shadow: 0 0 2px 0 rgba(black, 0.4);
+					cursor: pointer;
+
+					&.selected {
+						box-shadow: 0 0 2px 0 rgba(blue, 0.8);
+					}
+				}
+			}
+		}
 		.cart-item {
 			display: flex;
 			flex-direction: row;
