--- a/scss/components/notification.scss
+++ b/scss/components/notification.scss
@@ -1,6 +1,6 @@
 @import "../colors";
 .notification-section {
-	position: fixed;
+	position: absolute;
 	width: 200px;
 	min-height: 100px;
 	right: 10px;
