--- a/scss/header.scss
+++ b/scss/header.scss
@@ -69,7 +69,7 @@
 				color: inherit;
 
 				padding: 0.5rem;
-                border-radius: 10px;
+				border-radius: 10px;
 
 				&:hover {
 					background-color: rgba(black, 0.4);
@@ -82,4 +82,86 @@
 .nav-spacer {
 	height: 4rem;
 	width: 100%;
+}
+
+.mobile-nav {
+	position: fixed;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	width: 250px;
+	align-items: center;
+	padding: 4rem;
+	padding-top: 1rem;
+	box-sizing: border-box;
+	background: white;
+	z-index: 15;
+	a {
+		display: block;
+		padding: 20px;
+		width: 100%;
+		box-sizing: border-box;
+		&:hover {
+			background: rgba(black, 0.3);
+		}
+		text-decoration: none;
+		color: black;
+	}
+
+	.close {
+		height: 2rem;
+		text-align: right;
+
+		i {
+			color: black;
+		}
+		button {
+			border-radius: 50%;
+			&:hover {
+				background: rgba(black, 0.3);
+			}
+		}
+	}
+	button {
+		background: transparent;
+		border: none;
+		cursor: pointer;
+		height: 100%;
+	}
+}
+
+#sidebar {
+	display: none;
+	&.sidebar-shown {
+		display: block;
+	}
+}
+
+#show-sidebar {
+	display: none;
+	button {
+		background: transparent;
+		border: none;
+		cursor: pointer;
+		height: 100%;
+	}
+}
+.main.sidebar-shown {
+	margin-right: 250px;
+	width: calc(100vw - 250px);
+
+	#header {
+		right: 250px;
+	}
+}
+
+@media screen and (max-width: 1000px) {
+	#header-nav {
+		display: none;
+	}
+	#show-sidebar {
+		display: block;
+	}
 }
