--- a/scss/process.scss
+++ b/scss/process.scss
@@ -23,9 +23,12 @@
 			flex-direction: row;
 			display: flex;
 			justify-content: space-evenly;
+			overflow: visible;
 
 			@media screen and (max-width: 992px) {
-				flex-direction: column;
+				// flex-direction: column;
+				display: block;
+				// min-height: 700px;
 			}
 
 			.box {
@@ -39,17 +42,18 @@
 
 				display: flex;
 				flex-direction: column;
+				// min-height: 300px;
 
 				.box--top {
 					background: $box-top-bg;
 					flex: 0;
 					padding: 8px;
-                    flex-basis: 0;
-                    min-height: 50px;
-                    h3 {
-                        line-height: 50px;
-                    }
-                    border-bottom: 1px solid black;
+					flex-basis: 0;
+					min-height: 50px;
+					h3 {
+						line-height: 50px;
+					}
+					border-bottom: 1px solid black;
 				}
 				.box--bottom {
 					background: $box-bottom-bg;
