--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,78 +1,42 @@
 {{> title-section title="About Us" }}
 <div class="about-page page">
-	<h2>Pyxis</h2>
+	<h2>Your Johns Creek Web Design Team</h2>
+	<h3>Displacing the market since 2017</h3>
 	<p class="about-text">
-		Est. Sed eleifend odio sed leo. Mauris tortor turpis, dignissim vel,
-		ornare ac, ultricies quis, magna. Phasellus lacinia, augue ac dictum
-		tempor, nisi felis ornare magna, eu vehicula tellus enim eu neque. Fusce
-		est eros, sagittis eget, interdum a, ornare suscipit, massa. Sed
-		vehicula elementum ligula. Aliquam erat volutpat. Donec odio. Quisque
-		nunc. Integer cursus feugiat magna. Fusce ac elit ut elit aliquam
-		suscipit. Duis leo est, interdum nec, varius in, facilisis vitae, odio.
-		Phasellus eget leo at urna adipiscing vulputate. Nam eu erat vel arcu
-		tristique mattis. Nullam placerat lorem non augue. Cras et velit. Morbi
-		sapien nulla, volutpat a, tristique. Nibh eget risus volutpat tempor.
-		Praesent volutpat sollicitudin dui. Sed in tellus id urna viverra
-		commodo. Vestibulum enim felis, interdum non, sollicitudin in, posuere
-		a, sem. Cras nibh. Sed facilisis ultrices dolor. Vestibulum pretium
-		mauris sed turpis. Phasellus a pede id odio interdum elementum. Nam urna
-		felis, sodales ut, luctus vel, condimentum vitae, est. Vestibulum ut
-		augue. Nunc laoreet sapien quis neque semper dictum. Phasellus rhoncus
-		est id turpis. Vestibulum in elit at odio pellentesque volutpat. Nam nec
-		tortor. Suspendisse porttitor consequat nulla. Morbi suscipit tincidunt
-		nisi. Sed laoreet, mauris et tincidunt facilisis, est nisi pellentesque
-		ligula, sit amet convallis neque dolor.
+		In the ever-expanding digital age, websites have become the most accessible connection between a company and its
+		consumers. Websites have become more than just a page of information, they have evolved to become the face of
+		their company standing as a monument to the consumer as a representation of their values. With new advancements
+		in technology constantly shifting the seas of the market, an unprepared company can easily be sunken. However,
+		we at Pyxis are no stranger to these seas. It is our duty and mission to constantly evolve, utilizing years of
+		experience in combination with new tools, to enable companies of any size to generate a tremendous impact that
+		displaces the market in their favor.
 	</p>
 
-	<h2>Testimonials</h2>
+	<h2>Success Stories</h2>
 
 	<div class="testimonials-grid">
 		<div class="testimonial" id="garuba-testimonial">
 			<div class="testimonial-text">
-				<h2>Garuba</h2>
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-					Veritatis fugiat corrupti fuga laudantium voluptatum
-					voluptate nobis doloremque! Illum fugit molestiae quam vero
-					eum cupiditate asperiores! Esse veritatis alias voluptatum
-					placeat.
-				</p>
+				<h2><a href="http://garuba.herokuapp.com">Garuba</a></h2>
+				<p>1st place at FBLA nationals 2018</p>
 			</div>
 		</div>
 		<div class="testimonial" id="accuracy-testimonial">
 			<div class="testimonial-text">
-				<h2>Accuracy</h2>
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-					Veritatis fugiat corrupti fuga laudantium voluptatum
-					voluptate nobis doloremque! Illum fugit molestiae quam vero
-					eum cupiditate asperiores! Esse veritatis alias voluptatum
-					placeat.
-				</p>
+				<h2><a href="http://accuracycpa.herokuapp.com">Accuracy</a></h2>
+				<p>Increased client exposure</p>
 			</div>
 		</div>
 		<div class="testimonial" id="form-testimonial">
 			<div class="testimonial-text">
-				<h2>Form</h2>
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-					Veritatis fugiat corrupti fuga laudantium voluptatum
-					voluptate nobis doloremque! Illum fugit molestiae quam vero
-					eum cupiditate asperiores! Esse veritatis alias voluptatum
-					placeat.
-				</p>
+				<h2><a href="http://formphysicaltherapy.com">Form</a></h2>
+				<p>Increased sales by 300%</p>
 			</div>
 		</div>
 		<div class="testimonial" id="northview-testimonial">
 			<div class="testimonial-text">
-				<h2>Northview</h2>
-				<p>
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-					Veritatis fugiat corrupti fuga laudantium voluptatum
-					voluptate nobis doloremque! Illum fugit molestiae quam vero
-					eum cupiditate asperiores! Esse veritatis alias voluptatum
-					placeat.
-				</p>
+				<h2><a href="http://northviewhigh.com">Northview</a></h2>
+				<p>Increased parent satisfaction</p>
 			</div>
 		</div>
 	</div>
