--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,8 @@
 		<h1>Beautiful, Functional Digital Transformation</h1>
 
 		<p>
-			Your website is equivalent to your first impression. We at Pyxis have been creating and transforming websites for a
+			Your website is equivalent to your first impression. We at Pyxis have been creating and transforming
+			websites for a
 			long time, so you know that your website will be a world-class destination - having customers gaze in awe.
 		</p>
 	</div>
@@ -52,21 +53,29 @@
 			<img src="img/process/Marketing.png" />
 			<h5>Marketing</h5>
 			<p>
-				We know the a website is only part of the battle. Pyxis continues to fight by your side, engaging and creating new
+				We know the a website is only part of the battle. Pyxis continues to fight by your side, engaging and
+				creating new
 				user experiences, to achieve new heights.
 			</p>
 		</div>
 	</div>
 	<div class="plans-gallery" id="plans">
 		<div class="plans-wrapper">
-			<div class="gallery-button button-left" @click="prevElement()"></div>
+			<div class="gallery-button button-left" @click="prevElement()">
+				<i class="fas fa-chevron-left"></i>
+			</div>
 			<ol class="plans-list">
 				<li v-for="(plan, index) in plans" :class="{ 'active': index === activeIndex }">
 					<img :src="plan.imgUrl" class="plan-image" />
-					<div class="plan-description" v-html="plan.description"></div>
+					<div class="plan-description">
+						<h2><% plan.name %></h2>
+						<p v-html="plan.description"></p>
+					</div>
 				</li>
 			</ol>
-			<div class="gallery-button button-right" @click="nextElement()"></div>
+			<div class="gallery-button button-right" @click="nextElement()">
+				<i class="fas fa-chevron-right"></i>
+			</div>
 		</div>
 	</div>
 </div>
