--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,13 +8,29 @@
 	<title>{{ title }}</title>
 	<link href="https://fonts.googleapis.com/css?family=Play|Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="/css/styles.css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	{{!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script> --}}
 </head>
 
 <body>
-	{{{body}}}
-	{{> notification}}
-	{{> footer}}
+	<div class="mobile-nav" id="sidebar">
+		<div class="close">
+			<button onclick="hideSidebar()">
+				<i class="fas fa-times"></i>
+			</button>
+		</div>
+		<a href="/about">About</a>
+		<a href="/process">Process</a>
+		<a href="/pricing">Pricing</a>
+		<a href="/merch">Merch</a>
+		<a href="/cart">Cart</a>
+	</div>
+	<div class="main" id="main">
+		{{{body}}}
+		{{> notification}}
+		{{> footer}}
+	</div>
 	<script src="/js/app.js"></script>
 </body>
 
