--- a/scss/merch.scss
+++ b/scss/merch.scss
@@ -16,5 +16,14 @@
 		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 		gap: 50px;
 	}
+
+	.merch-product-image {
+		width: 100%;
+		height: auto;
+		img {
+			width: 100%;
+			height: auto;
+		}
+	}
 	margin-bottom: 30px;
 }
