--- a/scss/homepage/plans-carousel.scss
+++ b/scss/homepage/plans-carousel.scss
@@ -50,14 +50,20 @@
 }
 
 .gallery-button {
-	height: 80%;
+	height: 100%;
 	min-height: 100px;
 	cursor: pointer;
 	width: 20px;
 	position: absolute;
-	top: 10%;
-	bottom: 10%;
+	top: 0;
+	bottom: 0;
 	font-size: 32px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	i {
+		display: block;
+	}
 	&.button-left {
 		left: 0px;
 	}
